--- a/templates/playlists-directory.html
+++ b/templates/playlists-directory.html
@@ -5,16 +5,23 @@
   <header class="folder-header flexrow" style="background-color: {{folder.data.color}}">
     <h3><i class="fas fa-folder-open fa-fw"></i>{{folder.name}}</h3>
     {{#if @root.user.isGM}}
-      <a class="create-folder" data-parent-folder="{{folder.id}}"><i class="fas fa-folder-plus fa-fw"></i></a>
-      <a class="create-entity" data-folder="{{folder.id}}"><i class="fas fa-plus-circle fa-fw"></i></a>
+    <a class="create-button create-folder" data-parent-folder="{{folder.id}}">
+      <i class="{{@root.folderIcon}}"></i>
+      <i class="fas fa-plus"></i>
+    </a>
+    <a class="create-button create-document" data-folder="{{folder.id}}">
+      <i class="{{@root.sidebarIcon}}"></i>
+      <i class="fas fa-plus"></i>
+    </a>
 	{{/if}}
   </header>
+
   <ol class="subdirectory">
-	{{~#each folder.children as |child i|}}
-      {{> folderPartial folder=child}}
+	{{~#each folder.children as |child|}}
+      {{> (lookup @root "folderPartial")}}
     {{/each}}
-    {{#each folder.playlists}}
-      {{> playlistPartial playlist=this}}
+    {{#each folder.content}}
+      {{> (lookup @root "documentPartial")}}
     {{/each~}}
   </ol>
 </li>
